Add popup component for pages; lotso styles yerrrrr

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portfolio website for CPSC 349 Spring 2024"
+      content="brenda pham's personal portfolio ^-^"
     />
     <title>Brenda Pham</title>
   </head>
